--- a/Tp/pom.xml
+++ b/Tp/pom.xml
@@ -13,4 +13,28 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+<!-- todo esto se agrego con lo visto en el video -->
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
+
+
+
 </project>
