--- a/Tp/pom.xml
+++ b/Tp/pom.xml
@@ -5,15 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>TrabajoIntegrador</artifactId>
+    <artifactId>Pruebas</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
-// todo esto se agrego con lo visto en el video
 
     <build>
         <plugins>
@@ -34,7 +32,6 @@
             <version>4.13.1</version>
         </dependency>
     </dependencies>
-
 
 
 </project>
