--- a/Tp/pom.xml
+++ b/Tp/pom.xml
@@ -24,6 +24,12 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>E:\Facultad_Aparte\3ro\DDS\DDS_Grupo_1\Tp\src\main\resources\META-INF</directory>
+            </resource>
+        </resources>
     </build>
     <dependencies>
         <dependency>
@@ -95,7 +101,22 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.25</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.4.18.Final</version>
+        </dependency>
+
+
     </dependencies>
+
+
+
 
 
 
